# project_meridian

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
client/: CMakeLists.txt  ENGINE_VERSION  README.md  SConstruct
client/bot/: CMakeLists.txt  bot_core.cpp  bot_core.h  bot_main.cpp  bot_two_main.cpp  bot_world_session.cpp  bot_world_session.h  connection_fsm.cpp  connection_fsm.h  reconnect_coordinator.cpp  reconnect_coordinator.h
client/bot/test/: bot_world_session_test.cpp  connection_fsm_test.cpp
client/forge/: README.md
client/forge/project/: forge_core.gdextension  forge_verify.gd  project.godot
client/gdextension/forge_core/: CMakeLists.txt
client/import-presets/: README.md  audio.import.tmpl  character.import.tmpl  env-kit.import.tmpl  foliage.import.tmpl  presets.json  prop.import.tmpl  texture-std.import.tmpl  vfx-texture.import.tmpl  weapon.import.tmpl
client/net/: CMakeLists.txt
client/net/src/: codec.cpp  framing.cpp  tcp_transport.cpp  tls_client.cpp  wire_frame.cpp  world_session.cpp
client/net/test/: clientnet_test.cpp
client/probe/: CMakeLists.txt  client_world_probe_core.cpp  client_world_probe_core.h  client_world_probe_main.cpp
client/probe/test/: client_world_probe_test.cpp
client/project/: README.md  export_presets.cfg  meridian.gdextension  project.godot
client/project/audio/: README.md  music_state_core.gd  music_timing_probe.gd  placeholder_stream_factory.gd  sfx_config.json  sfx_event_map.gd  sfx_placeholder_factory.gd  sfx_player.gd  sfx_player_verify.gd  zone_music_config.json  zone_music_player.gd  zone_music_player_verify.gd  zone_track_map.gd
client/project/characters/: assembled_character.gd  assembled_character_locomotion_verify.gd  assembled_character_verify.gd  dye_tint.gdshader  locomotion.gd  locomotion_clips.gd  locomotion_driver.gd  remote_locomotion_driver.gd
client/project/content/: content_db.gd  content_db_theme_verify.gd  content_db_verify.gd
client/project/hud/: ability_set.gd  action_bar.gd  bags_window.gd  cast_bar.gd  character_sheet_verify.gd  character_sheet_window.gd  chat_bubble.gd  chat_panel.gd  chat_verify.gd  combat_verify.gd  death_overlay.gd  death_overlay_verify.gd  econ_verify.gd  event_bus.gd  gossip_window.gd  hud.gd  hud_verify.gd  loot_window.gd  money.gd  power_colors.gd  quest_log_window.gd  quest_tracker.gd  quest_verify.gd  trainer_window.gd  unit_frame.gd  vendor_window.gd  xp_bar.gd
client/test/: README.md  authd_login_it.cpp  authd_realm_list_soak_it.cpp  run_authd_login_it.sh  run_authd_realm_list_soak_it.sh  run_bot_client_it.sh  run_client_sees_bot_it.sh  run_soak.sh  run_two_bot_it.sh
server/: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
server/authd/: CMakeLists.txt  login_session.cpp  login_session.h  main.cpp
server/authd/test/: ban_login_test.cpp  login_flow_test.cpp
server/characters/: CMakeLists.txt
server/characters/src/: characters.cpp  characters.h  roster.cpp  roster.h
server/characters/test/: characters_test.cpp
server/db/: README.md
server/db/characters/: README.md
server/items/: CMakeLists.txt
server/items/src/: currency.cpp  currency.h  inventory.cpp  inventory.h  item_store.cpp  item_store.h  item_template.cpp  item_template.h
server/items/test/: inventory_test.cpp  item_store_it.cpp
server/libs/bans/: CMakeLists.txt
server/libs/bus/: CMakeLists.txt
server/libs/core/: CMakeLists.txt
server/libs/db/: CMakeLists.txt  README.md
server/libs/metrics/: CMakeLists.txt
server/libs/net/: CMakeLists.txt
server/libs/proto/: CMakeLists.txt
server/libs/srp/: CMakeLists.txt  README.md
server/libs/trace/: CMakeLists.txt
server/loot/: CMakeLists.txt
server/loot/src/: loot_roll.cpp  loot_roll.h  loot_session.cpp  loot_session.h  loot_table.cpp  loot_table.h
server/loot/test/: loot_test.cpp
server/npc/: CMakeLists.txt
server/npc/src/: gossip.cpp  gossip.h  npc_def.cpp  npc_def.h  trainer.cpp  trainer.h
server/npc/test/: npc_test.cpp  trainer_db_it.cpp
server/ops/: README.md  docker-compose.observability.yml
server/ops/loki/: loki-config.yml
server/ops/otel-collector/: config.yml
server/ops/prometheus/: prometheus.yml
server/telemetryd/: CMakeLists.txt  ingest.cpp  ingest.h  ingest_http.cpp  ingest_http.h  main.cpp
server/telemetryd/test/: ingest_http_test.cpp  ingest_test.cpp
server/tools/meridian-account/: CMakeLists.txt
server/tools/meridian-character/: CMakeLists.txt
server/worldd/: CMakeLists.txt  ability_store.cpp  ability_store.h  active_sessions.cpp  active_sessions.h  aoi_grid.cpp  aoi_grid.h  area_triggers.cpp  area_triggers.h  aura_container.cpp  aura_container.h  character_stats_wire.cpp  character_stats_wire.h  class_kernel.cpp  class_kernel.h  combat_resolver.cpp  combat_resolver.h  combat_unit.cpp  combat_unit.h  creature_ai.cpp  creature_ai.h  db_content_store.cpp  db_content_store.h  death_state.cpp  death_state.h  economy_sanity.cpp  economy_sanity.h  effective_stats.cpp  effective_stats.h  effective_stats_aggregator.cpp  effective_stats_aggregator.h  equipment_service.cpp  equipment_service.h  gm_command.cpp  gm_command.h  leveling.cpp  leveling.h  loot_registry.cpp  loot_registry.h  main.cpp  (+32 more)
server/worldd/test/: ability_primitives_test.cpp  ability_store_test.cpp  active_sessions_test.cpp  aoi_grid_test.cpp  area_triggers_test.cpp  aura_container_test.cpp  ban_mute_it.cpp  cast_ability_db_it.cpp  char_mgmt_test.cpp  char_persist_test.cpp  character_stats_push_test.cpp  cheat_client_suite_it.cpp  chibi_classes_db_it.cpp  class_kernel_test.cpp  combat_golden_test.cpp  combat_resolver_test.cpp  combat_unit_test.cpp  combat_wire_test.cpp  content_load_db_it.cpp  creature_ai_test.cpp  death_state_test.cpp  death_xp_test.cpp  economy_sanity_test.cpp  effective_stats_aggregator_test.cpp  effective_stats_db_it.cpp  effective_stats_test.cpp  enter_spawn_db_it.cpp  entity_enter_visual_test.cpp  (+35 more)
tools/mcc/: .gitignore  CMakeLists.txt  CMakePresets.json  FORMAT.md  README.md
(+1290 files in other folders)
